--- a/templates/newpage.html
+++ b/templates/newpage.html
@@ -24,10 +24,10 @@
        <td>{{ accounts }}</td>
     </tr>
     </table>
-    <input type="hidden" name="STATUS_URL" value="mailto:1607489250@qq.com">
-    <input type="hidden" name="PAYMENT_URL" value="https://www.baidu.com">
+    <input type="hidden" name="STATUS_URL" value="">
+    <input type="hidden" name="PAYMENT_URL" value="">
     <input type="hidden" name="PAYMENT_URL_METHOD" value="LINK">
-    <input type="hidden" name="NOPAYMENT_URL" value="https://www.zhihu.com">
+    <input type="hidden" name="NOPAYMENT_URL" value="">
     <input type="hidden" name="NOPAYMENT_URL_METHOD" value="LINK">
     <input type="hidden" name="SUGGESTED_MEMO" value="">
     <input type="hidden" name="BAGGAGE_FIELDS" value="">
